--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.container {
-  display: flex;
-}
-
 .image {
   flex: 1;
   padding: 30px;
@@ -16,8 +12,8 @@ img {
   height: 100%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 768px) {
   .container {
-    flex-direction: column;
+    display: flex;
   }
 }
