--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -4,30 +4,31 @@
   }
   
   .image {
-    padding: 10px;
+    padding: 5px;
     flex: 1;
     position: relative;
     overflow: hidden;
   }
   
   .title {
-    transition: bottom ease 1s, font 1s;
+    transition: bottom ease 2s, font 2s;
     opacity: 0.9;
     position: absolute;
     bottom: -100px;
     left: 0;
     width: 100%;
-    font-size: 10px;
+    font-size: 5px;
     background-color: white;
-    color: #30846b;
+    color: lightgray;
     text-align: center;
   }
   
   .image:hover .title {
     display: block;
-    bottom: 0px;
-    height: 90px;
-    font-size: 15px;
+    bottom: 1px;
+    height: 80px;
+    font-size: 12px;
+    color:  black;
   }
   
   img {
