--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -1,37 +1,40 @@
+html {
+    background-color: black;
+}
+
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  }
-  
-  .image {
-    padding: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+}
+
+.image {
     flex: 1;
     position: relative;
     overflow: hidden;
-  }
-  
-  .title {
+}
+
+.title {
     transition: bottom ease 2s, font 2s;
-    opacity: 0.9;
+    opacity: 0.8;
     position: absolute;
     bottom: -100px;
     left: 0;
     width: 100%;
     font-size: 5px;
     background-color: white;
-    color: lightgray;
+    color: grey;
     text-align: center;
-  }
-  
-  .image:hover .title {
+}
+
+.image:hover .title {
     display: block;
     bottom: 1px;
     height: 80px;
     font-size: 12px;
-    color:  black;
-  }
-  
-  img {
+    color: black;
+}
+
+img {
     width: 100%;
     height: 100%;
-  }
+}
