--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -14,27 +14,62 @@ html {
 }
 
 .title {
-    transition: bottom ease 2s, font 2s;
-    opacity: 0.8;
+    transition: bottom ease 2s, font 2s, opacity 2s;
+    opacity: 0.5;
     position: absolute;
-    bottom: -100px;
+    bottom: -200px;
     left: 0;
     width: 100%;
+    height: 180px;
     font-size: 5px;
-    background-color: white;
-    color: grey;
+    background-color: rgb(7, 99, 161);
+    /* background-color: red; */
+    color: rgb(236, 101, 101);
     text-align: center;
 }
 
 .image:hover .title {
-    display: block;
-    bottom: 1px;
-    height: 80px;
-    font-size: 12px;
-    color: black;
+    bottom: 0px;
+    opacity: 1;
+    font-size: 20px;
+    color: red;
 }
 
 img {
     width: 100%;
     height: 100%;
 }
+
+/* .movieName {
+    text-align: center;
+    color: black;
+    font-size: 50px;
+} */
+
+/* .movieName {
+    transition: bottom ease 2s font 2s;
+    opacity: 0.8;
+    position: absolute;
+    bottom: -300px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    font-size: 40px;
+    background-color: white;
+    color: red;
+    text-align: center;
+} */
+
+/* .movieName:hover {
+    transition: bottom ease 2s font 2s;
+    opacity: 0.8;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    font-size: 40px;
+    background-color: white;
+    color: red;
+    text-align: center;
+} */
