--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -32,44 +32,10 @@ html {
     bottom: 0px;
     opacity: 1;
     font-size: 20px;
-    color: red;
+    color: rgb(153, 0, 0);
 }
 
 img {
     width: 100%;
     height: 100%;
 }
-
-/* .movieName {
-    text-align: center;
-    color: black;
-    font-size: 50px;
-} */
-
-/* .movieName {
-    transition: bottom ease 2s font 2s;
-    opacity: 0.8;
-    position: absolute;
-    bottom: -300px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    font-size: 40px;
-    background-color: white;
-    color: red;
-    text-align: center;
-} */
-
-/* .movieName:hover {
-    transition: bottom ease 2s font 2s;
-    opacity: 0.8;
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    font-size: 40px;
-    background-color: white;
-    color: red;
-    text-align: center;
-} */
