--- a/src/components/NotFound.css
+++ b/src/components/NotFound.css
@@ -1,5 +1,10 @@
 .not_found_message {
-    color: white;
+    color: red;
     font-size: 40px;
     text-align: center;
+    margin-top: 100px;
+}
+
+.not_found {
+    padding: 40px;
 }
