--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -4,7 +4,8 @@
 
 .detailsName {
     color: red;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 5px;
     font-size: 50px;
 }
 
@@ -14,8 +15,28 @@
     color: white;
 }
 
-.detailsSynopsis {
-    text-align: center;
-    font-size: 30px;
+.synopsisDetails {
+    font-size: 17px;
+    font-weight: 600;
     color: white;
+    padding: 30px;
 }
+
+.synopsis_details_wrapper {
+    margin-bottom: 40px;
+  }
+
+@media only screen and (min-width: 600px) {
+    .synopsis_details_wrapper {
+      display: flex;
+      margin-bottom: 20px;
+    }
+    .synopsisImage {
+        height: 32%;
+        width: 32%;
+        padding-right: 50px;
+    }
+    /* .synopsisDetails {
+        padding: 10px 60px 0 60px;
+    } */
+  }
