--- a/src/frontend/components/Gallery.css
+++ b/src/frontend/components/Gallery.css
@@ -14,24 +14,24 @@ html {
 }
 
 .title {
-    transition: bottom ease 2s, font 2s, opacity 2s;
-    opacity: 0.5;
+    transition: bottom ease 1.5s, font 1.5s, opacity 1.5s;
+    opacity: 0;
     position: absolute;
     bottom: -200px;
     left: 0;
     width: 100%;
-    height: 180px;
+    height: 100px;
     font-size: 5px;
-    background-color: rgb(7, 99, 161);
-    color: rgb(236, 101, 101);
+    background-color: black;
+    color: white;
     text-align: center;
 }
 
 .image:hover .title {
     bottom: 0px;
     opacity: 1;
-    font-size: 20px;
-    color: rgb(153, 0, 0);
+    font-size: 10px;
+    color: white;
 }
 
 img {
