--- a/src/frontend/App.css
+++ b/src/frontend/App.css
@@ -12,7 +12,7 @@
   font-size: 50px;
   text-align: center;
   display:flex;
-  justify-content: space-around;
+  justify-content: left;
   align-items: center;
 }
 
