--- a/src/frontend/components/Gallery.css
+++ b/src/frontend/components/Gallery.css
@@ -14,16 +14,16 @@ html {
 }
 
 .title {
-    transition: bottom ease 1.5s, font 1.5s, opacity 1.5s;
+    transition: bottom ease 1s, font 1s, opacity 1.5s;
     opacity: 0;
     position: absolute;
     bottom: -200px;
     left: 0;
     width: 100%;
-    height: 100px;
-    font-size: 5px;
+    height: 70px;
+    font-size: 10px;
     background-color: black;
-    color: white;
+    color: grey;
     text-align: center;
 }
 
@@ -31,7 +31,7 @@ html {
     bottom: 0px;
     opacity: 1;
     font-size: 10px;
-    color: white;
+    color: grey;
 }
 
 img {
